--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,9 @@
     <link rel="shortcut icon" href="assets/images/logo.png" />
 
     <!-- Css -->
-    <link href="assets/libs/tiny-slider.css" rel="stylesheet">
+    <link href="assets/lib/tiny-slider.css" rel="stylesheet">
     <!-- Main Css -->
-    <link href="assets/libs/@iconscout/line.css" type="text/css" rel="stylesheet" />
+    <!-- <link href="assets/lib/line.css" type="text/css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="assets/css/icons.css" />
     <link rel="stylesheet" href="assets/css/tailwind.css" />
 
