--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,7 +38,7 @@
             <!-- Navigation Menu-->   
             <ul class="navigation-menu">
 
-                {% for link in site.data.nav.nav %}
+                {% for link in site.data.links.nav %}
                 <li><a href="{{ link.link }}" class="sub-menu-item">{{ link.name }}</a></li>
                 {% endfor %}
         
