--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <section class="relative table w-full py-36 lg:py-44 text-center">
     <div class="container">
         <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px] text-center">
-            <div class="md:col-span-12 self-stretch justify-self-stretch">
+            <div class="md:col-span-12 self-stretch justify-self-stretch md:gap-y-6 gap-y-4">
                 <!-- <div class="ltr:md:mr-6 rtl:md:ml-6"> -->
                     <!-- <h4 class="font-semibold lg:leading-normal leading-normal text-4xl lg:text-5xl mb-5 text-black dark:text-white">Our Creativity Is Your <span class="text-green-600">Success</span></h4>
                     <p class="text-slate-400 text-lg max-w-xl">Launch your campaign and benefit from our expertise on designing and managing conversion centered Tailwind CSS v3.x html page.</p> -->
@@ -14,8 +14,8 @@ layout: default
                         <img src="assets/images/logo_long_dark.png" class="inline-block dark:hidden" alt="">
                         <img src="assets/images/logo_long_light.png" class="hidden dark:inline-block" alt="">
                         <p class="text-slate-400 text-lg">Welcome to Electrium Mobility! Join us in our mission to create electric vehicles!</p>
-                        <a href="/join" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2"><i class="uil uil-envelope"></i>Join us</a>
-                        <a href="/sponsor" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2"><i class="uil uil-book-alt"></i> Become a Sponsor</a>
+                        <a href="/join" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2">Join us</a>
+                        <a href="/sponsor" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2">Become a Sponsor</a>
                 <!-- </div> -->
             </div>
 
