--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
         <div class="grid grid-cols-12">
             <div class="col-span-12">
                 <div class="py-[60px] px-0">
-                    <div class="grid md:grid-cols-12 grid-cols-1 gap-[30px]">
-                        <div class="lg:col-span-4 md:col-span-12">
+                    <div class="grid md:grid-cols-3 grid-cols-3 gap-[30px]">
+                        <!-- <div class="lg:col-span-4 md:col-span-12">
                             <a href="#" class="text-[22px] focus:outline-none">
                                 <img src="assets/images/logo-light.png" alt="">
                             </a>
@@ -31,35 +31,42 @@
                                 <li class="inline"><a href="mailto:support@shreethemes.in" class="btn btn-icon btn-sm border border-gray-800 rounded-md hover:border-green-600 dark:hover:border-green-600 hover:bg-green-600 dark:hover:bg-green-600"><i class="uil uil-envelope align-middle" title="email"></i></a></li>
                                 <li class="inline"><a href="https://forms.gle/QkTueCikDGqJnbky9" target="_blank" class="btn btn-icon btn-sm border border-gray-800 rounded-md hover:border-green-600 dark:hover:border-green-600 hover:bg-green-600 dark:hover:bg-green-600"><i class="uil uil-file align-middle" title="customization"></i></a></li>
                             </ul><!--end icon-->
-                        </div><!--end col-->
+                        <!-- </div>end col -->
                 
-                        <div class="lg:col-span-2 md:col-span-4">
-                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Company</h5>
+                        <div>
+                            <!-- <h5 class="tracking-[1px] text-gray-100 font-semibold">Company</h5> -->
                             <ul class="list-none footer-list mt-6">
-                                <li><a href="page-aboutus.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> About us</a></li>
+                                {% for link in site.data.links.nav %}
+                                <li class="mt-[10px]"><a href="{{link.link}}" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out font-bold" target="_blank">{{ link.name }}</a></li>
+                                {% endfor %}
+                                <!-- <li><a href="page-aboutus.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> About us</a></li>
                                 <li class="mt-[10px]"><a href="page-services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Services</a></li>
                                 <li class="mt-[10px]"><a href="page-team.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Team</a></li>
                                 <li class="mt-[10px]"><a href="page-pricing.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Pricing</a></li>
                                 <li class="mt-[10px]"><a href="portfolio-creative-four.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Project</a></li>
                                 <li class="mt-[10px]"><a href="blog.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Blog</a></li>
-                                <li class="mt-[10px]"><a href="auth-login.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Login</a></li>
+                                <li class="mt-[10px]"><a href="auth-login.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Login</a></li> -->
                             </ul>
                         </div><!--end col-->
                 
-                        <div class="lg:col-span-3 md:col-span-4">
-                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Usefull Links</h5>
+                        <div>
+                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Socials</h5>
                             <ul class="list-none footer-list mt-6">
-                                <li><a href="page-terms.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Terms of Services</a></li>
+                                {% for social in site.data.links.socials %}
+                                    <li class="mt-[10px]"><a href="{{social.link}}" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out" target="_blank">{{social.name}}</a></li>
+                                {% endfor %}
+                                <!-- <li><a href="page-terms.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Terms of Services</a></li>
                                 <li class="mt-[10px]"><a href="page-privacy.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Privacy Policy</a></li>
                                 <li class="mt-[10px]"><a href="documentation.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Documentation</a></li>
                                 <li class="mt-[10px]"><a href="changelog.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Changelog</a></li>
-                                <li class="mt-[10px]"><a href="widget.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Widget</a></li>
+                                <li class="mt-[10px]"><a href="widget.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out"><i class="uil uil-angle-right-b"></i> Widget</a></li> -->
                             </ul>
                         </div><!--end col-->
 
-                        <div class="lg:col-span-3 md:col-span-4">
-                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Newsletter</h5>
-                            <p class="mt-6">Sign up and receive the latest tips via email.</p>
+                        <div>
+                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Contact</h5>
+                            <a href="mailto:{{site.email}}" class="mt-6">{{site.email}}</a>
+                            <!-- <p class="mt-6">Sign up and receive the latest tips via email.</p>
                             <form>
                                 <div class="grid grid-cols-1">
                                     <div class="foot-subscribe my-3">
@@ -72,7 +79,7 @@
                                 
                                     <button type="submit" id="submitsubscribe" name="send" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md">Subscribe</button>
                                 </div>
-                            </form>
+                            </form> -->
                         </div><!--end col-->
                     </div><!--end grid-->
                 </div><!--end col-->
@@ -82,9 +89,12 @@
 
     <div class="py-[30px] px-0 border-t border-slate-800">
         <div class="container text-center">
-            <div class="grid md:grid-cols-2 items-center">
+            <div class="grid md:grid-cols-4 grid-cols-4 items-right">
+                <div></div>
+                <div></div>
+                <div></div>
                 <div class="ltr:md:text-left rtl:md:text-right text-center">
-                    <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Techwind. Design with <i class="mdi mdi-heart text-red-600"></i> by <a href="https://shreethemes.in/" target="_blank" class="text-reset">Shreethemes</a>.</p>
+                    <p class="mb-0">@ <script>document.write(new Date().getFullYear())</script> Electrium Mobility</p>
                 </div>
 
                 <ul class="list-none ltr:md:text-right rtl:md:text-left text-center mt-6 md:mt-0">
