--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,12 +97,12 @@
                     <p class="mb-0">@ <script>document.write(new Date().getFullYear())</script> Electrium Mobility</p>
                 </div>
 
-                <ul class="list-none ltr:md:text-right rtl:md:text-left text-center mt-6 md:mt-0">
+                <!-- <ul class="list-none ltr:md:text-right rtl:md:text-left text-center mt-6 md:mt-0">
                     <li class="inline"><a href=""><img src="assets/images/payments/american-ex.png" class="max-h-6 inline" title="American Express" alt=""></a></li>
                     <li class="inline"><a href=""><img src="assets/images/payments/discover.png" class="max-h-6 inline" title="Discover" alt=""></a></li>
                     <li class="inline"><a href=""><img src="assets/images/payments/master-card.png" class="max-h-6 inline" title="Master Card" alt=""></a></li>
                     <li class="inline"><a href=""><img src="assets/images/payments/paypal.png" class="max-h-6 inline" title="Paypal" alt=""></a></li>
-                    <li class="inline"><a href=""><img src="assets/images/payments/visa.png" class="max-h-6 inline" title="Visa" alt=""></a></li>
+                    <li class="inline"><a href=""><img src="assets/images/payments/visa.png" class="max-h-6 inline" title="Visa" alt=""></a></li> -->
                 </ul>
             </div><!--end grid-->
         </div><!--end container-->
