--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
     <meta name="website" content="{{ site.baseurl}}" />
     <meta name="email" content="{{ site.email }}" />
     <meta name="version" content="2.1.0" />
+    <meta name="theme-color" content="#40B549" />
+    <meta name="og:image" content="/assets/images/logo.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- favicon -->
@@ -19,5 +21,6 @@
     <!-- <link href="assets/lib/line.css" type="text/css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="assets/css/icons.css" />
     <link rel="stylesheet" href="assets/css/tailwind.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
 </head>
