--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,8 +3,8 @@
     <div class="container">
         <!-- Logo container-->
         <a class="logo" href="index.html">
-            <img src="assets/images/logo_long_dark.png" class="inline-block dark:hidden" width=138 alt="">
-            <img src="assets/images/logo_long_light.png" class="hidden dark:inline-block" width=138 alt="">
+            <img src="assets/images/long_logo_dark.png" class="dark:inline-block hidden" width=138 alt="">
+            <img src="assets/images/long_logo_light.png" class="dark:hidden inline-block" width=138 alt="">
         </a>
 
         <!-- End Logo container-->
