--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ title: Home
 layout: default
 ---
 <!-- Start Hero -->
-<section class="relative table w-full py-36 lg:py-44 text-center bg-gray-100 dark:bg-slate-900">
+<section class="relative table w-full py-36 lg:py-44 text-center">
     <div class="container">
         <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px] text-center">
             <div class="md:col-span-12 self-stretch justify-self-stretch md:gap-y-6 gap-y-4">
@@ -11,9 +11,9 @@ layout: default
                     <!-- <h4 class="font-semibold lg:leading-normal leading-normal text-4xl lg:text-5xl mb-5 text-black dark:text-white">Our Creativity Is Your <span class="text-green-600">Success</span></h4>
                     <p class="text-slate-400 text-lg max-w-xl">Launch your campaign and benefit from our expertise on designing and managing conversion centered Tailwind CSS v3.x html page.</p> -->
                     
-                        <img src="assets/images/long_logo_dark.png" class="inline-block dark:hidden pb-8" alt="">
-                        <img src="assets/images/long_logo_light.png" class="hidden dark:inline-block pb-8" alt="">
-                        <p class="text-slate-400 text-lg pb-8">Welcome to Electrium Mobility! Join us in our mission to create electric vehicles!</p>
+                        <img src="assets/images/long_logo_dark.png" class="hidden dark:inline-block pb-8" alt="">
+                        <img src="assets/images/long_logo_light.png" class="inline-block dark:hidden pb-8" alt="">
+                        <p class="text-slate-400 text-lg pb-8 font-bold">Welcome to Electrium Mobility! <br>Join us in our mission to create electric vehicles!</p>
                         <a href="/join" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2">Join us</a>
                         <a href="/sponsor" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2">Become a Sponsor</a>
                 <!-- </div> -->
@@ -75,18 +75,18 @@ layout: default
 
         <div class="grid md:grid-cols-3 items-center justify-center text-center gap-[30px]">
             <div class="text-center">
-                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" preserveAspectRatio="xMaxYMin slice" style="width: 12%">
+                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" preserveAspectRatio="xMaxYMin slice" style="width: 14%">
                     <!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#40B549" d="M144 56c0-4.4 3.6-8 8-8h80c4.4 0 8 3.6 8 8v72H144V56zm176 72H288V56c0-30.9-25.1-56-56-56H152C121.1 0 96 25.1 96 56v72H64c-35.3 0-64 28.7-64 64V416c0 35.3 28.7 64 64 64c0 17.7 14.3 32 32 32s32-14.3 32-32H256c0 17.7 14.3 32 32 32s32-14.3 32-32c35.3 0 64-28.7 64-64V192c0-35.3-28.7-64-64-64zM112 224H272c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 128H272c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
                 <h4 class="mb-3 text-2xl md:leading-normal leading-normal font-bold">Portability</h4>
                 <p class="text-slate-600 max-w-xl mx-auto">Our vehicles are by design, incredibly easy to carry around</p>
             </div>
             <div>
-                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" preserveAspectRatio="xMidYMin slice" style="width: 13%"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#40B549" d="M210.6 5.9L62 169.4c-3.9 4.2-6 9.8-6 15.5C56 197.7 66.3 208 79.1 208H104L30.6 281.4c-4.2 4.2-6.6 10-6.6 16C24 309.9 34.1 320 46.6 320H80L5.4 409.5C1.9 413.7 0 419 0 424.5c0 13 10.5 23.5 23.5 23.5H192v32c0 17.7 14.3 32 32 32s32-14.3 32-32V448H424.5c13 0 23.5-10.5 23.5-23.5c0-5.5-1.9-10.8-5.4-15L368 320h33.4c12.5 0 22.6-10.1 22.6-22.6c0-6-2.4-11.8-6.6-16L344 208h24.9c12.7 0 23.1-10.3 23.1-23.1c0-5.7-2.1-11.3-6-15.5L237.4 5.9C234 2.1 229.1 0 224 0s-10 2.1-13.4 5.9z"/></svg>
+                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" preserveAspectRatio="xMidYMin slice" style="width: 15%"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#40B549" d="M210.6 5.9L62 169.4c-3.9 4.2-6 9.8-6 15.5C56 197.7 66.3 208 79.1 208H104L30.6 281.4c-4.2 4.2-6.6 10-6.6 16C24 309.9 34.1 320 46.6 320H80L5.4 409.5C1.9 413.7 0 419 0 424.5c0 13 10.5 23.5 23.5 23.5H192v32c0 17.7 14.3 32 32 32s32-14.3 32-32V448H424.5c13 0 23.5-10.5 23.5-23.5c0-5.5-1.9-10.8-5.4-15L368 320h33.4c12.5 0 22.6-10.1 22.6-22.6c0-6-2.4-11.8-6.6-16L344 208h24.9c12.7 0 23.1-10.3 23.1-23.1c0-5.7-2.1-11.3-6-15.5L237.4 5.9C234 2.1 229.1 0 224 0s-10 2.1-13.4 5.9z"/></svg>
                 <h4 class="mb-3 text-2xl md:leading-normal leading-normal font-bold">Sustainability</h4>
                 <p class="text-slate-600 max-w-xl mx-auto">We care about the environment so our vehicles use electricity</p>
             </div>
             <div>
-                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 576" preserveAspectRatio="xMidYMin slice" style="width: 15%"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#40B549" d="M400 96l0 .7c-5.3-.4-10.6-.7-16-.7H256c-16.5 0-32.5 2.1-47.8 6c-.1-2-.2-4-.2-6c0-53 43-96 96-96s96 43 96 96zm-16 32c3.5 0 7 .1 10.4 .3c4.2 .3 8.4 .7 12.6 1.3C424.6 109.1 450.8 96 480 96h32l-18.8 75.1c15.8 14.8 28.7 32.8 37.5 52.9H544c17.7 0 32 14.3 32 32v96c0 17.7-14.3 32-32 32H512c-9.1 12.1-19.9 22.9-32 32v64c0 17.7-14.3 32-32 32H416c-17.7 0-32-14.3-32-32V448H256v32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V416c-34.9-26.2-58.7-66.3-63.2-112H68c-37.6 0-68-30.4-68-68s30.4-68 68-68h4c13.3 0 24 10.7 24 24s-10.7 24-24 24H68c-11 0-20 9-20 20s9 20 20 20H99.2c12.1-59.8 57.7-107.5 116.3-122.8c12.9-3.4 26.5-5.2 40.5-5.2H384zm64 136a24 24 0 1 0 -48 0 24 24 0 1 0 48 0z"/></svg>
+                <svg class="mx-auto pb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 576" preserveAspectRatio="xMidYMin slice" style="width: 18%"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#40B549" d="M400 96l0 .7c-5.3-.4-10.6-.7-16-.7H256c-16.5 0-32.5 2.1-47.8 6c-.1-2-.2-4-.2-6c0-53 43-96 96-96s96 43 96 96zm-16 32c3.5 0 7 .1 10.4 .3c4.2 .3 8.4 .7 12.6 1.3C424.6 109.1 450.8 96 480 96h32l-18.8 75.1c15.8 14.8 28.7 32.8 37.5 52.9H544c17.7 0 32 14.3 32 32v96c0 17.7-14.3 32-32 32H512c-9.1 12.1-19.9 22.9-32 32v64c0 17.7-14.3 32-32 32H416c-17.7 0-32-14.3-32-32V448H256v32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V416c-34.9-26.2-58.7-66.3-63.2-112H68c-37.6 0-68-30.4-68-68s30.4-68 68-68h4c13.3 0 24 10.7 24 24s-10.7 24-24 24H68c-11 0-20 9-20 20s9 20 20 20H99.2c12.1-59.8 57.7-107.5 116.3-122.8c12.9-3.4 26.5-5.2 40.5-5.2H384zm64 136a24 24 0 1 0 -48 0 24 24 0 1 0 48 0z"/></svg>
                 <h4 class="mb-3 text-2xl md:leading-normal leading-normal font-bold">Affordability</h4>
                 <p class="text-slate-600 max-w-xl mx-auto">Our vehicles are fairly low cost to make</p>
             </div>
