--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-
+<!-- 
 <div class="relative">
     <div class="shape absolute right-0 sm:-bottom-px -bottom-[2px] left-0 overflow-hidden z-1 text-dark-footer">
         <svg class="w-full h-auto" viewBox="0 0 2880 250" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M720 125L2160 0H2880V250H0V125H720Z" fill="currentColor"></path>
         </svg>
     </div>
-</div>
+</div> -->
 
 
 <!-- Footer Start -->
