--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
                         <img src="assets/images/long_logo_light.png" class="inline-block dark:hidden pb-8" alt="">
                         <p class="text-slate-400 text-lg pb-8 font-bold">Welcome to Electrium Mobility! <br>Join us in our mission to create electric vehicles!</p>
                         <a href="/join" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2">Join us</a>
-                        <a href="/sponsor" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2">Become a Sponsor</a>
+                        <a href="/sponsor" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2">Become a Sponsor</a>
                 <!-- </div> -->
             </div>
 
