--- a/_layouts/sponsor.html
+++ b/_layouts/sponsor.html
@@ -10,7 +10,7 @@ layout: default
                 <p class="text-lg md:leading-normal leading-normal font-medium">Interested in sponsoring our projects?</p>
             </div>
             <div class="grid-cols-12 mx-8">
-                <a href="mailto:{{site.email}}" class="float-right btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2">Become a Sponsor</a>
+                <a href="mailto:{{site.email}}" class="float-right btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2">Become a Sponsor</a>
             </div>
         </div>
     </div>
