--- a/_layouts/teams.html
+++ b/_layouts/teams.html
@@ -9,7 +9,7 @@ layout: default
                 <h2 class="md:text-5xl text-4xl md:leading-normal leading-normal font-medium">Meet the Team</h2>
                 <p class="text-lg md:leading-normal leading-normal font-medium">Meet out team of dedicated students!</p>
                 <div class="grid-cols-12 justify-content-end">
-                    <a href="/join" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 hover:text-white rounded-md mt-2 justify-self-end">Join us</a>
+                    <a href="/join" class="btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2 justify-self-end">Join us</a>
                 </div>
             </div>
             <div>
