--- a/_layouts/join.html
+++ b/_layouts/join.html
@@ -9,7 +9,7 @@ title: Join
                 <h2 class="md:text-5xl text-4xl md:leading-normal leading-normal font-medium">Join our Expanding Team</h2>
                 <p class="text-lg md:leading-normal leading-normal font-medium">Interested in joining our team? Let us know!</p>
                 <div class="grid-cols-12 mx-8">
-                    <a href="/join" class="float-right btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2">Join us</a>
+                    <a href="forms.gle/A3NF9DCtPMFFEr5UA" target="_blank" class="float-right btn bg-transparent hover:bg-green-600 border-green-600 text-green-600 dark:hover:text-white rounded-md mt-2">Join us</a>
                 </div>
             </div>
             <div>
@@ -99,7 +99,7 @@ title: Join
         <div class="grid grid-cols-1 items-center text-center">
             <h3 class="mb-6 md:text-3xl text-2xl md:leading-normal leading-normal font-semibold">Interested in our work?</h3>
             <div class="grid-cols-12">
-                <a href="mailto:{{ site.email }}" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2">Apply now</a>
+                <a href="forms.gle/A3NF9DCtPMFFEr5UA" target="_blank" class="btn bg-green-600 hover:bg-green-700 border-green-600 hover:border-green-700 text-white rounded-md ltr:mr-2 rtl:ml-2 mt-2">Apply now</a>
             </div>
         </div>
     </div>
