--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,9 @@
         <!-- LTR & RTL Mode Code -->
 
         <!-- JAVASCRIPTS -->
-        <script src="assets/lib/tiny-slider.js"></script>
+        <!-- <script src="assets/lib/tiny-slider.js"></script>
         <script src="assets/libs/feather.min.js"></script>
-        <script src="assets/js/plugins.init.js"></script>
+        <script src="assets/js/plugins.init.js"></script> -->
         <script src="assets/js/app.js"></script>
         <!-- JAVASCRIPTS -->
     </body>
