--- a/_layouts/join.html
+++ b/_layouts/join.html
@@ -21,8 +21,8 @@ title: Join
 
 <section class="relative md:py-24 py-16 bg-gray-100 dark:bg-slate-900">
     <div class="container">
-        <div class="grid grid-cols-2 pb-8">
-            <div>
+        <div class="pb-8 flex">
+            <div class="w-9/12">
                 <h3 class="mb-6 md:text-3xl text-2xl md:leading-normal leading-normal font-semibold">Why Join?</h3>
                 <p class="text-slate-600 pb-8">
                     Electrium Mobility will let you apply content from your major that you're supposed to be learning. We
