--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,14 +2,14 @@
 
 .do-stuff-on-hover div {
     color: transparent;
-    transition: 1s;
+    transition: 0.7s;
     position: absolute;
     z-index: 2;
 }
 
 .do-stuff-on-hover img {
     filter: blur(0px) brightness(100%);
-    transition: 1s;
+    transition: 0.7s;
 }
 
 
@@ -19,8 +19,19 @@
 
 .do-stuff-on-hover:hover > img {
     filter: blur(5px) brightness(50%);
-    transition: 1s;
+    transition: 0.7s;
 }
+
+.member-image-description-text {
+    display: flex;
+    position: relative;
+    width: inherit;
+    height: inherit;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+} /* TODO: figure this out later*/
+
 
 /* details summary {
 list-style-type: none;
