--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6970,6 +6970,10 @@ html[dir=rtl] .tns-visually-hidden {
   margin-right: 1.5rem !important;
 }
 
+.mr-6{
+  margin-right: 1.5rem !important;
+}
+
 [dir="ltr"] .ltr\:ml-6{
   margin-left: 1.5rem !important;
 }
@@ -7331,6 +7335,10 @@ html[dir=rtl] .tns-visually-hidden {
 }
 
 [dir="rtl"] .rtl\:mr-4{
+  margin-right: 1rem !important;
+}
+
+.mr-4{
   margin-right: 1rem !important;
 }
 
